# video-offset-finder

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/video_offset_finder/: __init__.py  cli.py  finder.py  hashing.py  models.py  video.py
tests/: __init__.py  conftest.py  test_cli.py  test_components.py  test_real_content.py  test_search_offsets.py  test_synthetic.py
